--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "start:dev": "nodemon src/server.ts",
+    "start:prod": "node dist/server.js"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
