--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:prod": "node dist/server.js"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
