--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start:prod": "node dist/server.js"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
